--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Badge Generator Application" />
-    <meta name="theme-color" content="#822378" />
-    <title>Badge Generator</title>
+    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
